--- a/styles/components/Feed.module.scss
+++ b/styles/components/Feed.module.scss
@@ -1,1 +1,29 @@
 @import "../index.module.scss";
+
+.feed {
+    position: relative;
+    width: min-content;
+    height: min-content;
+
+    .overlay {
+        background: rgba(0,0,0,0.5);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+
+        * {
+            flex: 1;
+        }
+    }
+
+    video {
+        height: fit-content;
+        width: fit-content;
+    }
+}
