--- a/styles/components/auth-indicators/index.module.scss
+++ b/styles/components/auth-indicators/index.module.scss
@@ -1,31 +1,35 @@
 @import "../../index.module.scss";
 
-svg {
-    width: 100px;
-    display: block;
-    margin: 40px auto 0;
-}
-  
-.path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 0;
-    &.circle {
-        animation: dash .9s ease-in-out;
+.authIndicator {
+    background: radial-gradient(circle at center, black 0, transparent 100%);
+    
+    svg {
+        width: 100px;
+        display: block;
+        margin: 40px auto 0;
     }
-}
-  
-p {
-    text-align: center;
-    margin: 20px 0 60px;
-    font-size: 1.25em;
-    animation: fadeIn 0.5s ease-in;
-}
-  
-@keyframes dash {
-    0% {
-        stroke-dashoffset: 1000;
-    }
-    100% {
+      
+    .path {
+        stroke-dasharray: 1000;
         stroke-dashoffset: 0;
+        &.circle {
+            animation: dash .9s ease-in-out;
+        }
+    }
+      
+    p {
+        text-align: center;
+        margin: 20px 0 60px;
+        font-size: 1.25em;
+        animation: fadeIn 0.5s ease-in;
+    }
+      
+    @keyframes dash {
+        0% {
+            stroke-dashoffset: 1000;
+        }
+        100% {
+            stroke-dashoffset: 0;
+        }
     }
 }
