--- a/styles/components/Feed.module.scss
+++ b/styles/components/Feed.module.scss
@@ -2,8 +2,12 @@
 
 .feed {
     position: relative;
-    width: min-content;
-    height: min-content;
+
+    video {
+        object-fit: contain;
+        height: 80vh;
+        width: 100vw;
+    }
 
     .overlay {
         height: 100%;
@@ -19,10 +23,5 @@
         * {
             flex: 1;
         }
-    }
-
-    video {
-        height: fit-content;
-        width: fit-content;
     }
 }
