--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,26 +1,36 @@
 @import "../index.module.scss";
 
 .container {
-  padding: 0 2rem;
+  width: 100vw;
+  height: 100vh;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 80vh;
 }
 
 .footer {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
+  padding: 2rem 1.5rem;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  height: 20vh;
+
+  div {
+    width: max-content;
+    height: min-content;
+    display: flex;
+    
+    * {
+      margin: 0 8px;
+    }
+  }
 }
 
 .footer a {
