🐛 Fixed video feed

--- a/styles/components/Feed.module.scss
+++ b/styles/components/Feed.module.scss
@@ -3,7 +3,7 @@
 .feed {
     position: relative;
 
-    video {
+    img, video {
         object-fit: contain;
         height: 80vh;
         width: 100vw;
